--- a/Project3_math_operators/index.html
+++ b/Project3_math_operators/index.html
@@ -78,7 +78,8 @@ The next paragraph is to show the use of the
 	<p id="mathdivide"></p>
 	<BR>
 	<BR>
-	<p id="Math7"></p>
+		<p>more match</p>
+	<p id="Math7" onclick="more_Math()"></p>
 	<BR>
 	<BR>
 	<p id="Math8"></p>
@@ -97,7 +98,7 @@ The next paragraph is to show the use of the
 	<BR>
 	<BR>
 
-	<p id="Math13"></p>
+		<p id="use_concat" onclick="util_plus_minus()">Click Here</p>
 	<BR>
 	<BR>
 		
@@ -119,14 +120,14 @@ The next paragraph is to show the use of the
   document.getElementById("Math8").innerHTML = "When you divide 25 by 6 you have a remainder of: " + simple_Math;
 </script>-->
 
+<p id="Math13" onclick="powers()">Click Herexx</p>
 
+	<p id="Math14" onclick="util_plus_minus()">Click Hereyyy</p>
 
 
 	<script src="JS/main.js"></script>
 
-
-
-	<p id="use_concat" onclick="util_plus_minus()">Click Here</p>
+	
 
 
 
