Assignment for Math Operations Javascript Click
2nd submission

--- a/Project3_math_operators/index.html
+++ b/Project3_math_operators/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="" author" content="Christopher Belton">
 	<!--- <script src="JS/main.js"></script>  -->
-
+	<script src="JS/main.js"></script>
 </head>
 
 
@@ -21,113 +21,65 @@
 	<BR>
 
 
-	<!--
-
-This is an earlier attempt in a Tech Academy step to build a GetElementbyID function
-		<button onclick="button_clk()">
-			Click me!
-		</button>
-
-		<p id="Button_Text"></p>
-
--->
-
-	<!--OPERATOR ASSIGNMENT
-The next paragraph is to show the use of the 
-
--->
-
-
-	<!--<p id = "use_concat" onclick = "util_plus_minus()">Click Here</p>-->
-
-
-
-
-	<!--FUNCTION CHALLENGE Step 75-->
-
-
-
-	<p id="math"></p>
-
+<!--addition-->
+	<p id="math" onclick="myFunction()">Click here for addition</p>
 	<BR>
 	<BR>
-	<p id="math2"></p>
+		<!--invoke multiplication function on click and post answer under the id-->
+	<p id="math2" onclick="myFunctionmult()">click here for multiplication</p>
 	<BR>
 	<BR>
 
 
-	<!--
-<script>
-
-	function myFunction(p1, p2) {
-	  return p1 * p2;
-	}
 	
-	let result = myFunction(4, 3);
-	document.getElementById("demo").innerHTML = result;
-	
-
-</script>
--->
 	<!----FUNCTION CHALLENGE STEP 75.  KEY PT IS SCRIPT MUST BE BELOW the ID that is being written to-->
 
+	<!--This is a subtraction equation-->
+	<p id="mathsubtract" onclick="myFunctionsubtract()">click here for subtraction</p>
+	<BR>
+	<BR>
+	<!--This is a divison equation-->
+		<p id="mathdivide" onclick="myFunctiondivide()">click here for division</p>
+	<BR>
+	<BR>
+		<!--This is a multi-operation function-->
+	<p id="Math7" onclick="more_Math()">Click for simple multi-operand equation</p>
+	<BR>
+	<BR>
+		
+		<!--Modulus - returns the remainder of a division problem.-->
 
-	<p id="mathsubtract"></p>
+	<p id="Math8" onclick="modulus_Operator()">Click to get the remainder of a division equation</p>
 	<BR>
 	<BR>
-	<p id="mathdivide"></p>
+		<!--Negates a number-->
+	<p id="Math9" onclick="negation_operation()">click here for negation operation</p>
 	<BR>
 	<BR>
-		<p>more match</p>
-	<p id="Math7" onclick="more_Math()"></p>
+	<!--Increases a number by 1 using the decrement operator-->
+		<p id="Math10" onclick="incremeter()">Click here to see the result of a number increment by 1</p>
 	<BR>
 	<BR>
-	<p id="Math8"></p>
+	<!--Reduces a number by 1 using the decrement operator-->	
+	<p id="Math11" onclick="decremeter()">Click here to see the result of a number decrement by 1</p>
 	<BR>
 	<BR>
-	<p id="Math9"></p>
+	<!--Call for a Random Number between two values-->	
+	<p id="Math12" onclick="Randompick()">Click here for a random number</p>
 	<BR>
 	<BR>
-	<p id="Math10"></p>
-	<BR>
-	<BR>
-	<p id="Math11"></p>
-	<BR>
-	<BR>
-	<p id="Math12"></p>
-	<BR>
-	<BR>
-
-		<p id="use_concat" onclick="util_plus_minus()">Click Here</p>
+		<!--Powers Function Call-->
+		<!--Invokes the powers function and places value on the index.html page under the Match 13 id-- Mrs. Powers, I have been waiting for you. ..Dr. Evil-->
+	<p id="Math13" onclick="powers()">CLick Here to see a Base and Exponent result</p>
 	<BR>
 	<BR>
 		
 
-
-	<!--<script>
-	var simple_Math = (1 + 2) * 10 / 2 - 5;
-  	document.getElementById("Math7").innerHTML = "1 + 2 times 10 divided 2 - 5 equals " + simple_Math; 
-
-
-
-
-
-</script>-->
-
-
-	<!--<script>
-	var simple_Math = 25 % 6;
-  document.getElementById("Math8").innerHTML = "When you divide 25 by 6 you have a remainder of: " + simple_Math;
-</script>-->
-
-<p id="Math13" onclick="powers()">Click Herexx</p>
-
-	<p id="Math14" onclick="util_plus_minus()">Click Hereyyy</p>
-
-
-	<script src="JS/main.js"></script>
-
+		<script src="JS/main.js"></script>
 	
+
+
+	<p id="use_concat" onclick="util_plus_minus()">Click Here</p>
 
 
 
